--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,34 @@
 <h4>List</h4>
 <ul class="list-group">
-  <li class="list-group-item">Krilin - 500</li>
-  <li class="list-group-item">Goku - 10,000</li>
+  <!-- Dentro de la funcion ngFor ya tenemos declarado el index (índice), solo lo asignamos al valor de i para poner en el listado los números -->
+  <!-- El first también es una función ya declarada en ngFor -->
+  <!-- El isEven es para saber si es par o no y el isOdd para saber si es inpar-->
+  <li *ngFor="let character of characterList;
+  let i = index;
+  let isFirst = first;
+  let isLast = last;
+  let isEven = even;
+  let isOdd = odd
+  "
+
+    class="list-group-item">
+    <!-- El índice inicia en el 0 pero para que inicie con 1 solo hay que ponerle el '+1' -->
+    <span class="text-primary"> {{i + 1}} </span>
+
+    <span>{{ character.name }} -</span>
+
+    <strong> Power: </strong>
+
+    <span>{{ character.power}}</span>
+
+    <!-- El isFirst nos ayuda a evitar poner la función de forma manual (i === 0)
+    <span> Es el primero: {{ isFirst }}</span>
+
+    Lo mismo con isLast, nos evita poner la función (i === characterList.length - 1)
+    <span> Es el último: {{ isLast }}</span>
+
+    <span> Es par: {{isEven}}</span>
+
+    <span> Es inpar: {{isOdd}}</span> -->
+  </li>
 </ul>
