--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -22,6 +22,6 @@
         Add
       </button>
 
-      <pre>{{ character | json }}</pre>
+      <!-- <pre>{{ character | json }}</pre> -->
 
     </form>
