--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -11,21 +11,28 @@
   let isOdd = odd
   "
 
-    class="list-group-item"
+    class="list-group-item d-flex justify-content-between align-items-center"
     [ngClass]="{
       'list-group-item-danger': isFirst,
-      'list-group-item-info': isLast
+      'list-group-item-info': isLast,
+      'list-group-item-warning': isEven
       }">
     <!-- EL ngClass nos sirve para darle estilos a diferentes clases sin rompernos la cabeza con ifs o fors -->
 
     <!-- El índice inicia en el 0 pero para que inicie con 1 solo hay que ponerle el '+1' -->
-    <span class="text-primary"> {{i + 1}} </span>
+    <div>
+      <span class="text-primary"> {{i + 1}} </span>
+      <span>{{ character.name }} -</span>
+      <strong> Power: </strong>
+      <span>{{ character.power}}</span>
+    </div>
 
-    <span>{{ character.name }} -</span>
-
-    <strong> Power: </strong>
-
-    <span>{{ character.power}}</span>
+    <button type="button" class="btn btn-outline-danger" (click)="deleteCharacterById( character.id )">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+      </svg>
+    </button>
 
     <!-- El isFirst nos ayuda a evitar poner la función de forma manual (i === 0)
     <span> Es el primero: {{ isFirst }}</span>
